--- a/src/app/views/orders/show.html.erb
+++ b/src/app/views/orders/show.html.erb
@@ -10,5 +10,10 @@
   <%= @order.user_id %>
 </p>
 
+<div>
+  <h2>Notice Me!</h2>
+  <h2 style="font-size: 100px;">Not Me;</h2>
+</div>
+
 <%= link_to 'Edit', edit_order_path(@order) %> |
 <%= link_to 'Back', orders_path %>
