--- a/src/app/assets/stylesheets/pages.scss
+++ b/src/app/assets/stylesheets/pages.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#container{
+  background-color: rgb(65, 179, 109);
+  width: 93vw;
+  height: 100vh;
+}
+
+.site_name{
+  display: inline-block;
+}
