--- a/src/app/views/items/_form.html.erb
+++ b/src/app/views/items/_form.html.erb
@@ -18,12 +18,12 @@
 
   <div class="field">
     <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.text_area :description %>
   </div>
 
   <div class="field">
     <%= form.label :condition %>
-    <%= form.text_area :condition %>
+    <%= form.text_field :condition %>
   </div>
 
   <div class="field">
