--- a/src/app/views/items/index.html.erb
+++ b/src/app/views/items/index.html.erb
@@ -19,13 +19,13 @@
   <tbody>
     <% @items.each do |item| %>
       <tr>
-        <td><%= item.id %></td>
+        <!-- <td><%= item.id %></td> -->
         <td><%= item.name %></td>
         <td><%= item.description %></td>
         <td><%= item.condition %></td>
         <td><%= item.price %></td>
         <td><%= item.image %></td>
-        <td><%= item.user_id %></td>
+        <!-- <td><%= item.user_id %></td> -->
         <td><%= link_to 'Show', item %></td>
         <td><%= link_to 'Edit', edit_item_path(item) %></td>
         <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
