--- a/src/app/views/pages/homepage.html.erb
+++ b/src/app/views/pages/homepage.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#homepage</h1>
-<p>Find me in app/views/pages/homepage.html.erb</p>
+<div id="container" >
+  <h1>HOME PAGE</h1>
+  
+</div>
+
+
