--- a/src/app/views/pages/homepage.html.erb
+++ b/src/app/views/pages/homepage.html.erb
@@ -1,6 +1,12 @@
 <div id="container" >
-  <h1>HOME PAGE</h1>
-  
+  <h1>Pete's Darthub</h1>
+  <p>
+    <strong>Attention Darts players!</strong>   <br>
+    Welcome to Pete's Darthub <br>
+    
+    A place for dart players and enhusiasts to buy, sell or swap their darts and darts accessories. <br>
+    New here? Click the sign up link to start finding that "perfect set of darts for your throwing style"
+  </p>
 </div>
 
 
