--- a/src/app/views/pages/menupage.html.erb
+++ b/src/app/views/pages/menupage.html.erb
@@ -1,6 +1,4 @@
 <h1>Members Area</h1>
-<div id="container">
-  <button type="button">BUY</button>
-  <button type="button">SELL</button>
-  <button type="button">My Sale Items</button>
+<div class="container">
+    <%= link_to 'Browse Items', items_path %>  
 </div>
