--- a/src/app/assets/stylesheets/pages.scss
+++ b/src/app/assets/stylesheets/pages.scss
@@ -1,12 +1,24 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#container{
-  background-color: rgb(65, 179, 109);
-  width: 93vw;
-  height: 100vh;
+.container{
+  // background-color: rgb(65, 179, 109);
+  width: 10vw;
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
 }
 
 .site_name{
   display: inline-block;
+}
+
+.btn{
+  background-color: cadetblue;
+  color: black;
+  border: 1px black solid;
+  border-radius: 1em;
+  padding: 7px 0px;
 }
