--- a/src/app/views/items/index.html.erb
+++ b/src/app/views/items/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Item</th>
+      <!-- <th>Item</th> -->
       <th>Item name</th>
       <th>Item description</th>
       <th>Item condtition</th>
@@ -18,22 +18,28 @@
 
   <tbody>
     <% @items.each do |item| %>
-      <tr>
-        <!-- <td><%= item.id %></td> -->
-        <td><%= item.name %></td>
-        <td><%= item.description %></td>
-        <td><%= item.condition %></td>
-        <td><%= item.price %></td>
-        <td><%= item.image %></td>
-        <!-- <td><%= item.user_id %></td> -->
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <tr>
+      <!-- <td><%= item.id %></td> -->
+      <td><%= item.name %></td>
+      <td><%= item.description %></td>
+      <td><%= item.condition %></td>
+      <td><%= item.price %></td>
+      <td><%= item.image %></td>
+      <!-- <td><%= item.user_id %></td> -->
+      <td><%= link_to 'Show', item %></td>
+      <% if current_user == item.user || current_user.has_role?(:admin) %>
+      <td><%= link_to 'Edit', edit_item_path(item) %></td>
+      <td>
+      <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </td>
+
+      <% end %>
+      
+    </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
+<br />
 
 <%= link_to 'New Item', new_item_path %>
