--- a/src/app/views/pages/adminpage.html.erb
+++ b/src/app/views/pages/adminpage.html.erb
@@ -1,7 +1,7 @@
 <h1>Admin Area</h1>
-<div id="container">
-  <button type="button">BUY</button>
-  <button type="button">SELL</button>
-  <button type="button">My Sale Items</button>
-  <button type="button">Edit Users</button>
+<div class="container">
+  <button class="btn" type="button">BUY</button>
+  <button class="btn" type="button">SELL</button>
+  <button class="btn" type="button">My Sale Items</button>
+  <button class="btn" type="button">Edit Users</button>
 </div>
