Added cloudinary with secure keys added quantity to model and form and views

--- a/src/app/views/items/_form.html.erb
+++ b/src/app/views/items/_form.html.erb
@@ -33,8 +33,13 @@
 
   <div class="field">
     <%= form.label :image %>
-    <%= form.text_field :image %>
+    <%= form.file_field :image %>
   </div>
+
+  <div class="field">
+    <%= form.label :quantity %>
+    <%= form.text_field :quantity %>
+  </div 
 
   <div class="actions">
     <%= form.submit %>
