--- a/src/app/views/items/show.html.erb
+++ b/src/app/views/items/show.html.erb
@@ -46,3 +46,5 @@
   <%= link_to 'Edit', edit_item_path(@item) %> |
 <% end %>
 <%= link_to 'Back', items_path %>
+<%= link_to 'Buy Now', new_item_order_path(@item) %>
+
