--- a/src/app/views/items/_form.html.erb
+++ b/src/app/views/items/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :price %>
-    <%= form.text_field :price %>
+    <%= form.number_field :price %>
   </div>
 
   <div class="field">
@@ -38,8 +38,8 @@
 
   <div class="field">
     <%= form.label :quantity %>
-    <%= form.text_field :quantity %>
-  </div 
+    <%= form.number_field :quantity, value: 1 %>
+  </div >
 
   <div class="actions">
     <%= form.submit %>
