--- a/src/app/views/orders/_form.html.erb
+++ b/src/app/views/orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: order, local: true) do |form| %>
+<%= form_with(model: Order.new, url: item_orders_path(params[:item_id]), local: true) do |form| %>
   <% if order.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
@@ -11,15 +11,26 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <!-- <div class="field">
     <%= form.label :order_id %>
     <%= form.number_field :order_id %>
+  </div> -->
+
+  <div class="field">
+      <% if Item.find(params[:item_id]).image.attached? %>
+        <%= image_tag Item.find(params[:item_id]).image, width: 50 %>
+      <% end %>
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.number_field :user_id %>
-  </div>
+    <%= form.label :price %>
+    <%= form.number_field :quantity, value: Item.find(params[:item_id]).price, disabled: true %>
+  </div >
+
+  <div class="field">
+    <%= form.label :quantity %>
+    <%= form.number_field :quantity, value: 1 %>
+  </div >
 
   <div class="actions">
     <%= form.submit %>
