deleted some scaffold contollers and views(not needed), added my_items view and action added route for my_items, added some css

--- a/src/app/assets/stylesheets/pages.scss
+++ b/src/app/assets/stylesheets/pages.scss
@@ -3,22 +3,39 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .container{
   // background-color: rgb(65, 179, 109);
-  width: 10vw;
-  height: 20vh;
+  width: 300px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-
 }
 
 .site_name{
   display: inline-block;
 }
 
-.btn{
+button.btn {
   background-color: cadetblue;
   color: black;
   border: 1px black solid;
-  border-radius: 1em;
+  border-radius: 2em;
   padding: 7px 0px;
+  width: 70%;
+  height: 40px;
+  
+}
+.btn {
+  background-color: cadetblue;
+  color: black;
+  border: 1px black solid;
+  border-radius: 2em;
+  padding: 7px 0px;
+  width: 70%;
+  height: 40px;
+  
+}
+a {
+  text-decoration: none;
+  text-align: center;
+  line-height: 2em;
 }
