--- a/src/app/views/items/show.html.erb
+++ b/src/app/views/items/show.html.erb
@@ -34,17 +34,30 @@
   <% end %>
 </p>
 <p>
-    <strong>Quantity</strong>
-  <%= @item.quantity %>
+    <strong>Availiable</strong>
+  <%= @item.quantity || 'SOLD OUT' %>
 </p>
-<!-- <p>
-  <strong>User:</strong>
-  <%= @item.user_id %>
-</p> -->
+
+<% unless current_user.items.include?(@item) %>
+
+<%= form_with(model: Order.new, url: item_orders_path(params[:id]), local: true) do |form| %>
+
+  <div class="field">
+    <%= form.label :quantity %>
+    <%= form.number_field :quantity, value: 1 %>
+  </div >
+  <br />
+
+  <span>
+    <div class="actions">
+      <%= form.submit 'Buy Now', class: 'btn' %>
+    </div>
+  </span>
+<% end %>
+<% end%>
 
 <% if current_user.items.include?(@item) %>
   <%= link_to 'Edit', edit_item_path(@item) %> |
 <% end %>
 <%= link_to 'Back', items_path %>
-<%= link_to 'Buy Now', new_item_order_path(@item) %>
 
