--- a/src/app/assets/stylesheets/pages.scss
+++ b/src/app/assets/stylesheets/pages.scss
@@ -1,41 +1,46 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.site_name{
+  display: inline-block;
+}
+
+button {
+  background-color: cadetblue;
+  color: black;
+  border: 1px black solid;
+  border-radius: 2em;
+  min-width: 50%;
+  max-width: 70%;
+  height: 30px;
+  line-height: 51px;
+  font-size: 1em;
+  
+}
+
 .container{
-  // background-color: rgb(65, 179, 109);
-  width: 300px;
+  max-width: 50%;
   height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 
-.site_name{
-  display: inline-block;
-}
-
-button.btn {
-  background-color: cadetblue;
-  color: black;
-  border: 1px black solid;
-  border-radius: 2em;
-  padding: 7px 0px;
-  width: 70%;
-  height: 40px;
-  
-}
 .btn {
   background-color: cadetblue;
   color: black;
   border: 1px black solid;
   border-radius: 2em;
-  padding: 7px 0px;
-  width: 70%;
-  height: 40px;
-  
+  max-width: 100%;
+  height: 50px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 45px;
 }
 a {
   text-decoration: none;
   text-align: center;
-  line-height: 2em;
+  margin-top: 1em;
 }
