--- a/src/app/assets/stylesheets/pages.scss
+++ b/src/app/assets/stylesheets/pages.scss
@@ -12,16 +12,17 @@ button {
   color: black;
   border: 1px black solid;
   border-radius: 2em;
-  min-width: 50%;
-  max-width: 50%;
-  height: 30px;
-  line-height: 51px;
-  font-size: 1em;
-  
+  min-width: 40%;
+  max-width: 90%;
+  height: 50px;
+  line-height: 20px;
+  font-size: .9em;
+  margin-bottom: 1em;
+
 }
 
 .container{
-  max-width: 70%;
+  max-width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -33,8 +34,8 @@ button {
   color: black;
   border: 1px black solid;
   border-radius: 2em;
-  max-width: 100%;
-  min-width: 90%;
+  max-width: 40%;
+  min-width: 30%;
   height: 50px;
   text-decoration: none;
   text-align: center;
